REGRESSION(176609): Very high memory usage in Canvas/reuse.html performance test https://bugs.webkit.org/show_bug.cgi?id=139812

Reviewed by Geoffrey Garen.

Update DOMTimerFireState.elementsChangedOutsideViewport to keep only
weak pointers to the Elements, instead of ref'ing them, so as to not
extend their life unnecessarily (by preventing garbage-collection).
The same approach was already adopted in r176496 for
DOMTimer.m_elementsCausingThrottling to address the same issue.

No new tests, already covered by Canvas/reuse.html performance test.

* page/DOMTimer.cpp:
(WebCore::DOMTimerFireState::setScriptMadeNonUserObservableChangesToElement):
(WebCore::DOMTimerFireState::elementsChangedOutsideViewport):


Canonical link: https://commits.webkit.org/159232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179581 268f45cc-cd09-0410-ab3c-d52691b4dbfc